@@ -22,7 +22,8 @@ import java.util.List;
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-
+    @Autowired
+    private OAuth2SuccessHandler oauthhandler;
     @Autowired
     private JwtFilter jwtFilter;
 
@@ -32,25 +33,54 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> {
-                    auth.requestMatchers("/actuator/health").permitAll();
-                    auth.requestMatchers("jobseeker/auth/**").permitAll();
+                    auth.requestMatchers("/", "/error", "/actuator/health").permitAll();
+                    auth.requestMatchers("/jobseeker/auth/**").permitAll();
+                    auth.requestMatchers("/oauth2/**").permitAll();
+                    auth.requestMatchers("/login/oauth2/**").permitAll();
+                    auth.requestMatchers("/auth/google/url").permitAll();
                     auth.requestMatchers("/jobprovider/**").hasAuthority("JOBPROVIDER");
                     auth.requestMatchers("/jobseeker/**").hasAnyAuthority("JOBSEEKER", "JOBPROVIDER");
+                    auth.requestMatchers("/dashboard", "/provider-dashboard").authenticated();
                     auth.anyRequest().authenticated();
                 })
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .oauth2Login(oauth -> oauth
+                        .successHandler(oauthhandler)
+                        .authorizationEndpoint(authorization -> authorization
+                                .baseUri("/oauth2/authorization"))
+                        .redirectionEndpoint(redirection -> redirection
+                                .baseUri("/login/oauth2/code/*")))
+                .logout(logout -> logout
+                        .logoutSuccessUrl("/")
+                        .invalidateHttpSession(true)
+                        .clearAuthentication(true)
+                        .deleteCookies("JSESSIONID", "AUTH_TOKEN"))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
-        return http.build();
 
+        return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedOrigins(List.of(
+                "https://job-app-frontend-q5zd.vercel.app",
+                "https://job-app-frontend-q5zd.vercel.app",
+                "https://accounts.google.com"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"));
+        configuration.setExposedHeaders(List.of(
+                "Authorization",
+                "Content-Disposition"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
